--- a/docs/quosures.Rmd
+++ b/docs/quosures.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Quosures in `R`
 
-## `glue` for Interpreting String Literals`
+## `glue` for Interpreting String Literals
 
 **an example**
 
